tests/fixtures/invalid/pow_set_bytes_str.py
# Cannot call pow() with Set[int], Bytes, Str
x = pow({1, 2, 3}, b"hello", "hello")
